--- a/src/components/NotifCard/NotifCard.css
+++ b/src/components/NotifCard/NotifCard.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .notifContent > p{
@@ -35,6 +35,14 @@
 
 }
 
+.acceptIcons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
 .icon{
-    font-size: 1.7rem;
+    font-size: 3rem;
 }
