--- a/src/components/NotifCard/NotifCard.css
+++ b/src/components/NotifCard/NotifCard.css
@@ -1,4 +1,4 @@
-.notifCardContainer{
+.notifCardContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -6,43 +6,40 @@
     gap: 10px;
     width: 40%;
     height: 100%;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
     border-radius: 10px;
     padding: 15px 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     color: black;
+    margin: 10px 0px;
+    min-width: 480px;
 }
-.notifCardContainer:hover{
-    background-color: #E0E0E0;
+.notifCardContainer:hover {
+    background-color: #e0e0e0;
 }
 
-.notifContent{
+.notifContent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
 }
 
-.notifContent > p{
+.notifContent > p {
     margin: 0;
     padding: 0;
     font-size: 1rem;
 }
-.notifContent > h3{
+.notifContent > h3 {
     margin: 0;
     padding: 0;
     font-size: 1.1rem;
-
 }
 
-.acceptIcons{
+.acceptIcons {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 10px;
-}
-
-.icon{
-    font-size: 3rem;
 }
